@@ -6,7 +6,7 @@ use warnings;
 use if $] >= 5.019, 'deprecate';
 use CGI ();
 
-$CGI::Pretty::VERSION = '4.35_01';
+$CGI::Pretty::VERSION = '4.36';
 $CGI::DefaultClass = __PACKAGE__;
 @CGI::Pretty::ISA = qw( CGI );
 
